@@ -2800,14 +2800,15 @@ void	dc_add_history(zbx_uint64_t itemid, unsigned char value_type, unsigned char
 
 	if (0 != (ZBX_FLAG_DISCOVERY & flags))
 	{
+		if (NULL == GET_TEXT_RESULT(value))
+			return;
+
 		/* server processes low-level discovery (lld) items while proxy stores their values in db */
-		if (GET_TEXT_RESULT(value))
-		{
-			if (0 == (ZBX_DAEMON_TYPE_SERVER & daemon_type))
-				dc_local_add_history_lld(itemid, ts, value->text);
-			else
-				DBlld_process_discovery_rule(itemid, value->text, ts);
-		}
+		if (0 != (ZBX_DAEMON_TYPE_SERVER & daemon_type))
+			DBlld_process_discovery_rule(itemid, value->text, ts);
+		else
+			dc_local_add_history_lld(itemid, ts, value->text);
+
 		return;
 	}
 
